# PhiOS

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFESTO.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  close-issues.yml  release.yml
docs/: BLUEPRINT.md  PARALLAX_FOUNDING_DOCUMENT.html  PARALLAX_FOUNDING_DOCUMENT.md  PHIOS_LIVING_SPEC.md  PHIOS_LIVING_SPEC.seal.json  RELEASE_SETUP.md  founding.seal.json  kernel-migration-v50.md
docs/launch/: announcement_extended.md  announcement_technical.md  announcement_x.md  distrowatch_submission.md  investor_summary.md
phios/: __init__.py
phios/adapters/: __init__.py  phik.py
phios/core/: __init__.py  bioeffector_layer.py  brainc_client.py  constants.py  founding_document.py  hemavit_observatory.py  kernel_rollout.py  kernel_runtime.py  launch_artifacts.py  living_spec.py  lt_engine.py  phi_sync.py  phik_service.py  psi_mind_observatory.py  rhythm.py  sectors.py  session_layer.py  sovereignty.py  tbrc_bridge.py
phios/desktop/: __init__.py  install.py  launcher.py  notifications.py  phi_tray.py  sovereignty_indicator.py  wallpaper.py  waybar_config.py  wayfire_config.py  wofi_css.py
phios/display/: __init__.py  colors.py  panels.py  sparkline.py
phios/fixtures/: kernel_eval_cases.json
phios/mcp/: __init__.py  browse_presets.py  discovery.py  policy.py  schema.py  server.py
phios/ml/: __init__.py  benchmark_recommendations.py  golden_atlas.py  golden_kernels.py  golden_lattice.py
phios/network/: __init__.py  discovery.py  exchange.py
phios/services/: __init__.py  agent_dispatch.py  agent_memory.py  cognitive_arch.py  cognitive_atoms.py  debate_arena.py  dispatch_graph.py  figure_fitness.py  review_gate.py  visualizer.py
phios/shell/: __init__.py  phi_commands.py  phi_dashboard.py  phi_onboard.py  phi_prompt.py  phi_router.py  phi_session.py
phios/templates/: __init__.py  sonic_atlas.html  sonic_atlas_cohort.html  sonic_atlas_gallery.html  sonic_atlas_map.html  sonic_branch_replay.html  (+21 more)
scripts/: close_github_issues.py  generate_release_notes.py  kernel_rollout_campaign.sh  policy_no_telemetry_runtime.sh  publish_pypi.sh
tests/: test_agent_dispatch.py  test_agent_memory.py  test_cognitive_arch.py  test_cognitive_atoms.py  test_debate_arena.py  test_dispatch_graph.py  test_figure_fitness.py  test_kernel_eval_command.py  test_mcp_client_integration.py  test_mcp_phase1.py  test_mcp_phase10.py  test_mcp_phase11.py  test_mcp_phase12.py  test_mcp_phase13.py  test_mcp_phase14.py  test_mcp_phase15.py  test_mcp_phase2.py  test_mcp_phase3.py  test_mcp_phase4.py  test_mcp_phase5.py  test_mcp_phase6.py  test_mcp_phase7.py  test_mcp_phase75.py  test_mcp_phase76.py  test_mcp_phase77.py  test_mcp_phase78.py  test_mcp_phase79.py  test_mcp_phase8.py  test_mcp_phase80.py  test_mcp_phase81.py  test_mcp_phase82.py  test_mcp_phase9.py  test_phik_adapter_runtime.py  test_review_gate.py  test_shell_agent_memory.py  test_shell_agents_figures.py  test_shell_debate.py  test_shell_dispatch.py  test_shell_dispatch_optimize.py  test_shell_recommend_arch.py  (+13 more)
(+50 files in other folders)
